# StatMiniPro

./: README.md
StatMiniPro/bayesian_regression/: README.md  bayesian_regression.py
StatMiniPro/big_data_divide_and_conquer/: README.md  big_data_divide_and_conquer.py
StatMiniPro/causal_inference/: README.md  causal_inference.py
StatMiniPro/fairness_classification/: README.md  fairness_classification.py
StatMiniPro/network_analysis/: README.md  network_analysis.py
StatMiniPro/statsmodels_time_series/: README.md  requirements.txt  statsmodels_time_series.py
methodshift/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
methodshift/.github/workflows/: ci.yml
methodshift/src/methodshift/: __init__.py
methodshift/src/methodshift/analysis/: changepoints.py  metrics.py  trend_models.py
methodshift/src/methodshift/ingest/: arxiv.py  crossref.py  doaj.py  openalex.py  pubmed.py  semanticscholar.py
methodshift/src/methodshift/labeling/: method_dict.yaml  tag_methods.py
methodshift/src/methodshift/utils/: dedupe.py  schema.py  text.py
methodshift/src/methodshift/viz/: plots.py
methodshift/tests/: conftest.py  test_schema_and_dedupe.py
